Truncate tds to max-width; make loader to fixed

--- a/cmd/public/styles.css
+++ b/cmd/public/styles.css
@@ -36,10 +36,10 @@ h1,h2,h3,h4,h5 {
 /* https://cssloaders.github.io/ */
 .loader::after {
   content: '';
-  width: 275px;
+  width: 75%;
   height: 4.8px;
   background: green;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   box-sizing: border-box;
@@ -66,6 +66,21 @@ h1,h2,h3,h4,h5 {
     text-align: center;
     font-weight: bold;
     color: #212121;
+}
+
+td {
+   max-width: 400px;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+}
+@media only screen and (max-width: 500px) {
+  #register {
+    font-size: 0.75rem;
+  }
+  td {
+    max-width: 150px;
+  }
 }
 
 .w-full {
